// Copyright 2021-2023 Buf Technologies, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package modulestate.v1alpha1;

// GlobalState is a sorted array managed modules, each one with the latest
// reference from its local array of references. This is kept updated in a
// global state file at the root sync directory.
message GlobalState {
  repeated GlobalStateReference modules = 1;
}

// GlobalReference is a single managed module reference with the latest
// reference from its local array of references.
message GlobalStateReference {
  string module_name = 1;
  string latest_reference = 2;
}

// ModuleState is an array of references that will be synced to a BSR cluster for a
// managed module. This is kept updated in a state file at the managed module
// directory.
message ModuleState {
  repeated ModuleReference references = 1;
}

// ModuleReference is a single git reference of a managed module that will be
// synced to a BSR cluster.
message ModuleReference {
  string name = 1;
  string digest = 2;
}
